---
source: tests/files.rs
expression: snapshot_content
---
(TArr (TUnitConst) (TUnitConst))
(let t0 (typeof (NilConst) (Lam "x" (TUnitConst) (Var "x"))))
(let prop0 (= t0 (TArr (TUnitConst) (TUnitConst))))
(let t1 (typeof (Cons "x" (TUnitConst) (NilConst)) (Var "x")))
(let t2 (TArr (TUnitConst) t1))
(let t3 (premises (Fiat (= t0 t0))))
(let t4
  (substitution
            (e (Var "x"))
            (ctx (NilConst))
            (@rewrite_var__3 t0)
            (x "x")
            (t1 (TUnitConst))))
(Trans
  prop0
  (Congr
    prop0
    (Sym
      (= t0 t2)
      (Rule
        (= t2 t0)
        (name
          "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
        t3
        t4))
    (Rule
      (= t1 (TUnitConst))
      (name "(rewrite (typeof (Cons x t ctx) (Var x)) t)")
      (premises
        (Rule
          (= t1 t1)
          (name
            "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
          t3
          t4))
      (substitution
        (t (TUnitConst))
        (ctx (NilConst))
        (@rewrite_var__1 t1)
        (x "x")))
    1)
  (Fiat (= (TArr (TUnitConst) (TUnitConst)) (TArr (TUnitConst) (TUnitConst)))))(TUnitConst)
(let t0 (App (Var "f") (Var "x")))
(let t1 (Lam "f" (TArr (TUnitConst) (TUnitConst)) t0))
(let t2 (Lam "x" (TUnitConst) t1))
(let t3 (App t2 (MyUnitConst)))
(let t4 (Lam "x" (TUnitConst) (Var "x")))
(let t5 (typeof (NilConst) (App t3 t4)))
(let prop0 (= t5 (TUnitConst)))
(let t6 (Cons "x" (TUnitConst) (NilConst)))
(let t7 (Cons "f" (TArr (TUnitConst) (TUnitConst)) t6))
(let t8 (typeof t7 t0))
(let prf0 (Fiat (= t5 t5)))
(let t9 (typeof (NilConst) t3))
(let t10 (typeof (NilConst) t4))
(let t11 (TArr (TArr (TUnitConst) (TUnitConst)) t8))
(let t12 (typeof t6 t1))
(let t13 (e t4))
(let t14 (f t3))
(let prf1
  (Rule
                        (= t9 t9)
                        (name
                          "(rule ((= (typeof ctx (App f e)) t2))
        ((typeof ctx f)
         (typeof ctx e))
           )")
                        (premises prf0)
                        (substitution (t2 t5) t13 (ctx (NilConst)) t14)))
(let t15 (typeof (NilConst) t2))
(let t16 (TArr (TUnitConst) t12))
(let t17 (premises prf1))
(let t18 (f t2))
(let t19
  (substitution
                                  (t2 t9)
                                  (e (MyUnitConst))
                                  (ctx (NilConst))
                                  t18))
(let t20
  (premises
                              (Rule
                                (= t15 t15)
                                (name
                                  "(rule ((= (typeof ctx (App f e)) t2))
        ((typeof ctx f)
         (typeof ctx e))
           )")
                                t17
                                t19)))
(let t21
  (substitution
                              (e t1)
                              (ctx (NilConst))
                              (@rewrite_var__3 t15)
                              (x "x")
                              (t1 (TUnitConst))))
(let t22
  (premises
                      (Rule
                        (= t12 t12)
                        (name
                          "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
                        t20
                        t21)))
(let t23 (ctx t6))
(let t24
  (substitution
                      (e t0)
                      t23
                      (@rewrite_var__3 t12)
                      (x "f")
                      (t1 (TArr (TUnitConst) (TUnitConst)))))
(let t25 (typeof t6 (Var "x")))
(let t26 (TArr (TUnitConst) t25))
(let t27 (premises (Fiat (= t10 t10))))
(let t28
  (substitution
                        (e (Var "x"))
                        (ctx (NilConst))
                        (@rewrite_var__3 t10)
                        (x "x")
                        (t1 (TUnitConst))))
(let prf2
  (Rule
                    (= t25 (TUnitConst))
                    (name "(rewrite (typeof (Cons x t ctx) (Var x)) t)")
                    (premises
                      (Rule
                        (= t25 t25)
                        (name
                          "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
                        t27
                        t28))
                    (substitution
                      (t (TUnitConst))
                      (ctx (NilConst))
                      (@rewrite_var__1 t25)
                      (x "x"))))
(let t29 (t2 t8))
(let t30 (t1 t5))
(let t31 (typeof t7 (Var "f")))
(let t32 (typeof t7 (Var "x")))
(let t33 (TArr t32 (TUnitConst)))
(let t34
  (premises
                  (Rule
                    (= t8 t8)
                    (name
                      "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
                    t22
                    t24)))
(let t35 (ctx t7))
(let t36 (substitution t29 (e (Var "x")) t35 (f (Var "f"))))
(Trans
  prop0
  (Rule
    prop0
    (name
      "(rule ((= (typeof ctx (App f e)) t1)
       (= (typeof ctx f) (TArr (typeof ctx e) t2)))
      ((union t1 t2))
         )")
    (premises
      (Rule
        (= t8 t5)
        (name
          "(rule ((= (typeof ctx (App f e)) t1)
       (= (typeof ctx f) (TArr (typeof ctx e) t2)))
      ((union t1 t2))
         )")
        (premises
          prf0
          (Congr
            (= t9 (TArr t10 t8))
            (Trans
              (= t9 t11)
              (Sym
                (= t9 t12)
                (Rule
                  (= t12 t9)
                  (name
                    "(rule ((= (typeof ctx (App f e)) t1)
       (= (typeof ctx f) (TArr (typeof ctx e) t2)))
      ((union t1 t2))
         )")
                  (premises
                    prf1
                    (Congr
                      (= t15 (TArr (typeof (NilConst) (MyUnitConst)) t12))
                      (Sym
                        (= t15 t16)
                        (Rule
                          (= t16 t15)
                          (name
                            "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
                          t20
                          t21))
                      (Sym
                        (= (TUnitConst) (typeof (NilConst) (MyUnitConst)))
                        (Rule
                          (= (typeof (NilConst) (MyUnitConst)) (TUnitConst))
                          (name "(rewrite (typeof ctx $MyUnit) $TUnit)")
                          (premises
                            (Rule
                              (=
                                (typeof (NilConst) (MyUnitConst))
                                (typeof (NilConst) (MyUnitConst)))
                              (name
                                "(rule ((= (typeof ctx (App f e)) t2))
      ((typeof ctx f)
       (typeof ctx e))
         )")
                              t17
                              t19))
                          (substitution
                            (ctx (NilConst))
                            ($MyUnit (MyUnitConst))
                            (@rewrite_var__ (typeof (NilConst) (MyUnitConst))))))
                      0))
                  (substitution
                    (t2 t12)
                    (e (MyUnitConst))
                    (ctx (NilConst))
                    t18
                    (t1 t9))))
              (Sym
                (= t12 t11)
                (Rule
                  (= t11 t12)
                  (name
                    "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
                  t22
                  t24)))
            (Sym
              (= (TArr (TUnitConst) (TUnitConst)) t10)
              (Congr
                (= t10 (TArr (TUnitConst) (TUnitConst)))
                (Sym
                  (= t10 t26)
                  (Rule
                    (= t26 t10)
                    (name
                      "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
                    t27
                    t28))
                prf2
                1))
            0))
        (substitution t29 t13 (ctx (NilConst)) t14 t30))
      (Trans
        (= t31 t33)
        (Rule
          (= t31 (TArr (TUnitConst) (TUnitConst)))
          (name "(rewrite (typeof (Cons x t ctx) (Var x)) t)")
          (premises
            (Rule
              (= t31 t31)
              (name
                "(rule ((= (typeof ctx (App f e)) t2))
      ((typeof ctx f)
       (typeof ctx e))
         )")
              t34
              t36))
          (substitution
            (t (TArr (TUnitConst) (TUnitConst)))
            t23
            (@rewrite_var__1 t31)
            (x "f")))
        (Congr
          (= (TArr (TUnitConst) (TUnitConst)) t33)
          (Fiat
            (=
              (TArr (TUnitConst) (TUnitConst))
              (TArr (TUnitConst) (TUnitConst))))
          (Trans
            (= (TUnitConst) t32)
            (Sym (= (TUnitConst) t25) prf2)
            (Sym
              (= t25 t32)
              (Rule
                (= t32 t25)
                (name
                  "(rewrite (typeof (Cons y ty ctx) (Var x)) (typeof ctx (Var x)) :when ((!= x y)))")
                (premises
                  (Rule
                    (= t32 t32)
                    (name
                      "(rule ((= (typeof ctx (App f e)) t2))
      ((typeof ctx f)
       (typeof ctx e))
         )")
                    t34
                    t36)
                  (Fiat (= () ())))
                (substitution
                  (@rewrite_var__2 t32)
                  (ty (TArr (TUnitConst) (TUnitConst)))
                  (y "f")
                  t23
                  (x "x")))))
          0)))
    (substitution (t2 (TUnitConst)) (e (Var "x")) t35 (f (Var "f")) t30))
  (Fiat (= (TUnitConst) (TUnitConst))))(TArr (TUnitConst) (TUnitConst))
(let t0 (Cons "y" (TUnitConst) (NilConst)))
(let t1 (typeof t0 (Lam "x" (TUnitConst) (Var "y"))))
(let prop0 (= t1 (TArr (TUnitConst) (TUnitConst))))
(let t2 (typeof (Cons "x" (TUnitConst) t0) (Var "y")))
(let t3 (TArr (TUnitConst) t2))
(let t4 (premises (Fiat (= t1 t1))))
(let t5 (ctx t0))
(let t6
  (substitution
            (e (Var "y"))
            t5
            (@rewrite_var__3 t1)
            (x "x")
            (t1 (TUnitConst))))
(let t7 (typeof t0 (Var "y")))
(Trans
  prop0
  (Congr
    prop0
    (Sym
      (= t1 t3)
      (Rule
        (= t3 t1)
        (name
          "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
        t4
        t6))
    (Rule
      (= t2 (TUnitConst))
      (name "(rewrite (typeof (Cons x t ctx) (Var x)) t)")
      (premises
        (Sym
          (= t2 t7)
          (Rule
            (= t7 t2)
            (name
              "(rewrite (typeof (Cons y ty ctx) (Var x)) (typeof ctx (Var x)) :when ((!= x y)))")
            (premises
              (Rule
                (= t2 t2)
                (name
                  "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
                t4
                t6)
              (Fiat (= () ())))
            (substitution
              (@rewrite_var__2 t2)
              (ty (TUnitConst))
              (y "x")
              t5
              (x "y")))))
      (substitution
        (t (TUnitConst))
        (ctx (NilConst))
        (@rewrite_var__1 t2)
        (x "y")))
    1)
  (Fiat (= (TArr (TUnitConst) (TUnitConst)) (TArr (TUnitConst) (TUnitConst)))))(TArr (TUnitConst) (TArr (TArr (TUnitConst) (TUnitConst)) (TUnitConst)))
(let t0 (TArr (TArr (TUnitConst) (TUnitConst)) (TUnitConst)))
(let t1 (Cons "y" t0 (NilConst)))
(let t2 (typeof t1 (Lam "x" (TUnitConst) (Var "y"))))
(let prop0 (= t2 (TArr (TUnitConst) t0)))
(let prf0 (Fiat (= t2 t2)))
(let t3 (typeof (Cons "x" (TUnitConst) t1) (Var "y")))
(let t4 (TArr (TUnitConst) t3))
(let t5 (premises prf0))
(let t6 (ctx t1))
(let t7
  (substitution
            (e (Var "y"))
            t6
            (@rewrite_var__3 t2)
            (x "x")
            (t1 (TUnitConst))))
(let t8 (typeof t1 (Var "y")))
(Trans
  prop0
  prf0
  (Congr
    prop0
    (Sym
      (= t2 t4)
      (Rule
        (= t4 t2)
        (name
          "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
        t5
        t7))
    (Rule
      (= t3 t0)
      (name "(rewrite (typeof (Cons x t ctx) (Var x)) t)")
      (premises
        (Sym
          (= t3 t8)
          (Rule
            (= t8 t3)
            (name
              "(rewrite (typeof (Cons y ty ctx) (Var x)) (typeof ctx (Var x)) :when ((!= x y)))")
            (premises
              (Rule
                (= t3 t3)
                (name
                  "(rewrite (typeof ctx (Lam x t1 e)) (TArr t1 (typeof (Cons x t1 ctx) e)))")
                t5
                t7)
              (Fiat (= () ())))
            (substitution
              (@rewrite_var__2 t3)
              (ty (TUnitConst))
              (y "x")
              t6
              (x "y")))))
      (substitution (t t0) (ctx (NilConst)) (@rewrite_var__1 t3) (x "y")))
    1))
